@@ -1,3 +1,13 @@
+2007-02-08  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* gdb.texinfo (-target-disconnect): Use @smallexample.
+	(Requirements): Add anchor for Expat.  Update description.
+	(Target Descriptions): Mention Expat.
+	(Target Description Format): Document new elements.  Use
+	@smallexample.
+	(Predefined Target Types, Standard Target Features): New sections.
+	* doc/gdbint.texinfo (Target Descriptions): New section.
+
 2007-02-07  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* gdb.texinfo (Target Description Format): Add section on XInclude.
